syntax = "proto3";

import "common.proto";

package masterfile.registry.v1;

message DeploymentType {

	oneof type {
		Contract contract = 1;
		Factory factory = 2;
		Unknown unknown = 3;
	}

	message Contract {}
	message Factory {}
	message Unknown {}
}

message ContractType {

	oneof type {
		Channel channel = 1;
		Drop drop = 2;
		Split split = 3;
		Unknown unknown = 4;
	}

	message Channel {}
	message Drop{}
	message Split {}
	message Unknown {}
}

message Deployment {
	string address = 1;
	uint64 ordinal = 2;
	DeploymentType deploymentType =4;
	ContractType contractType =5;
}

message Deployments {
	repeated Deployment deployments = 1;
}

message RegistryEvent {
	oneof event {
		DeploymentAdded deploymentAdded = 1;
		FactoryAdded factoryAdded = 2;
		RoleAdminChanged roleAdminChanged = 3;
		RoleGranted roleGranted = 4;
		RoleRevoked roleRevoked = 5;
	}

	message DeploymentAdded {
		string deployment = 1;
		string name = 2;
		ContractType contractType = 3;
	}
	
	message FactoryAdded {
		string factory = 1;
		string name = 2;
		uint64 version = 3;
		ContractType contractType = 4;
	}
	
	message RoleAdminChanged {
		string role = 1;
		string previousAdminRole = 2;
		string newAdminRole = 3;
	}
	
	message RoleGranted {
		string role = 1;
		string account = 2;
		string sender = 3;
	}
	
	message RoleRevoked {
		string role = 1;
		string account = 2;
		string sender = 3;
	}

	message Channel {}
	message Drop{}
	message Split {}
}

message RegistryEvents {
	repeated RegistryEvent events = 1;
}